--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,3 @@
-# PHP as Linux Web App on Azure
-
 trigger:
 - master
 
@@ -8,7 +6,7 @@ variables:
   webAppName: 'demohtml'
   vmImageName: 'ubuntu-latest'
   environmentName: 'demohtml'
-  rootFolder: $(System.DefaultWorkingDirectory) # Update if composer.json is in a subfolder
+  rootFolder: $(System.DefaultWorkingDirectory) # Adjust this if composer.json is in a subfolder
 
 stages:
 - stage: Build
@@ -25,22 +23,24 @@ stages:
         php -version
       displayName: 'Use PHP version $(phpVersion)'
 
-    # Debug: Check file structure
-    - script: ls -la $(System.DefaultWorkingDirectory)
-      displayName: 'List root directory files'
-      
-    - script: find $(System.DefaultWorkingDirectory) -name "composer.json"
-      displayName: 'Find composer.json location'
+    # Debug: List all files to find composer.json
+    - script: ls -R $(System.DefaultWorkingDirectory)
+      displayName: '🔍 Debug: List all files in the repository'
 
-    # Validate composer.json before installation
+    - script: find $(System.DefaultWorkingDirectory) -name "composer.json"
+      displayName: '🔍 Debug: Find composer.json location'
+
+    # Validate composer.json
     - script: |
         if [ ! -f "$(rootFolder)/composer.json" ]; then
-          echo "ERROR: composer.json not found in $(rootFolder)."
+          echo "❌ ERROR: composer.json not found in $(rootFolder)."
           exit 1
+        else
+          echo "✅ composer.json found!"
         fi
       displayName: 'Validate composer.json'
 
-    # Install dependencies if composer.json exists
+    # Install dependencies
     - script: composer install --no-interaction --prefer-dist --optimize-autoloader
       workingDirectory: $(rootFolder)
       displayName: 'Composer install'
